--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
     "pack": "electron-builder"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@types/dotenv": "^6.1.1",
+    "dotenv": "^17.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/genai": "latest"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/node": "^20.0.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.0",
     "electron": "^28.0.0",
     "electron-vite": "^2.0.0",
-    "typescript": "^5.3.0",
-    "vite": "^5.0.0",
+    "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0"
   }
 }
