--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "preview": "electron-vite preview",
-    "pack": "electron-builder"
+    "pack": "electron-builder",
+    "build:win": "electron-vite build && electron-builder --win",
+    "build:mac": "electron-vite build && electron-builder --mac",
+    "release": "electron-vite build && electron-builder --publish always"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -28,5 +31,34 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
+  },
+  "build": {
+    "appId": "com.filejanitor.app",
+    "productName": "File Janitor",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "out/**/*",
+      "package.json"
+    ],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "xSalah03",
+        "repo": "File-Jinator-2"
+      }
+    ],
+    "mac": {
+      "category": "public.app-category.utilities",
+      "target": [
+        "dmg"
+      ]
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    }
   }
 }
