--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.0",
     "electron": "^28.0.0",
+    "electron-builder": "^26.0.12",
     "electron-vite": "^2.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
