feat: Configure application icon for Electron window and build, and remove a UI rotation effect.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "build": {
     "appId": "com.filejanitor.app",
     "productName": "File Janitor",
+    "icon": "build/icon.png",
     "directories": {
       "output": "dist"
     },
